--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Relogio</title>
+   <link rel="stylesheet" href="relogio.css">
+</head>
+<body>
+  <div id="corpo">
+  <em><center><h1>Relógio</h1></center></em>
+    <center>
+      
+   <div id="mes"></div>
+          <center>
+            <div id="ano"></div>
+        </div>
+  </center>
+    <center>  <div id="relogio"></div>
+         <marquee>    <div id="dia"></div>
+           </center>
+         </marquee>
+            
+  </head>
+</body>
+  <script src="relogio.js">
+  </script>
+</center>
+</html>
